# dask_setup

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-to-pypi.yml
examples/: error_handling_demo.py
examples/recipes/: README.md  requirements.txt  run_recipe.py  test_recipes.py  utils.py
examples/recipes/01_basic/: basic_usage.py
examples/recipes/02_config_management/: custom_profiles.py
examples/recipes/03_memory_compression/: memory_compression.py
examples/recipes/04_storage_io/: storage_format_intelligence.py
examples/recipes/05_xarray_chunking/: xarray_best_practices.py
examples/recipes/06_hpc_pbs_slurm/: hpc_jobscript_demo.py
examples/recipes/07_error_troubleshoot/: common_errors.py
examples/recipes/08_real_world_science/: climate_analysis_case.py
examples/recipes/09_perf_optimization/: benchmark_scaling.py
examples/recipes/10_tool_integration/: rechunker_zarr_netcdf.py
examples/recipes/configs/: cpu_profile.yaml
examples/recipes/notebooks/: 01_basic_usage.ipynb  (+9 more)
src/: __init__.py  dask_setup.py  dask_setup_compat.py
src/dask_setup/: __init__.py  benchmark.py  callbacks.py  cli.py  client.py  cluster.py  config.py  config_manager.py  dashboard.py  environment.py  error_handling.py  exceptions.py  io_patterns.py  logging.py  multinode.py  parquet.py  rechunk.py  reporting.py  resources.py  topology.py  tune.py  workload.py  xarray.py
tests/: __init__.py  conftest.py  test_benchmark.py  test_cli.py  test_multinode.py  test_resources.py  test_setup_dask_client.py  test_xarray_chunks.py
(+2 files in other folders)
