[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dask_setup"
version = "0.1.0"
description = "HPC-tuned Dask helpers for single-node runs on NCI Gadi."
authors = [{name="Sam Green"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dask>=2024.1.0",
    "distributed>=2024.1.0",
    "psutil>=5.9",
]

[project.urls]
Homepage = "https://github.com/21centuryweather/dask_setup"

[project.optional-dependencies]
dev = [
    "ruff ~= 0.4",
    "pytest ~= 8.2",
    "pytest-cov ~= 5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]
include = ["*.py"]

[tool.ruff.lint]
# Rule selection: common scientific/typing sets
select = ["E", "F", "I", "UP", "S", "B", "C4", "SIM", "NPY", "RUF100"]
ignore = [
    "E501",  # line-length handled by formatter
    "S101",  # Use of assert detected - allow in tests
    "S108",  # Probable insecure usage of temporary file - expected in HPC context
]

[tool.pytest.ini_options]
addopts = "-q --cov=dask_setup --cov-report=term-missing"
pythonpath = ["src"]
